--- a/index.html
+++ b/index.html
@@ -25,6 +25,33 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
+    <!-- Google tag (gtag.js) -->
+    <script async
+      src="https://www.googletagmanager.com/gtag/js?id=G-4KSCR0MFF2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-4KSCR0MFF2');
+    </script>
+
+    <!-- Google Tag Manager -->
+    <script>
+    (
+      function(w,d,s,l,i)
+      {
+        w[l]=w[l]||[];
+        w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});
+        var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';
+        j.async=true;
+        j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;
+        f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-PJH55PPF');
+    </script>
+    <!-- End Google Tag Manager -->
+
   </head>
   <body>
     <div id="root"></div>
@@ -40,6 +67,13 @@
     <script src="/js/scripts.js"></script>
     <script src="/js/header-mobile.js"></script>
     <!-- <script src="/js/royal_preloader.min.js"></script> -->
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-PJH55PPF"
+        height="0" width="0"
+        style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <!-- <script>
       window.jQuery = window.$ = jQuery;
